@@ -1,3 +1,8 @@
+2013-05-27 belangeo <belangeo@gmail.com>
+
+    * E-Pyo: Added "Search in Project Files" option.
+    - rev 1108
+
 2013-05-24 belangeo <belangeo@gmail.com>
 
     * E-Pyo: Added Filters Menu. User-defined text processing functions.
